<resources>
    <string name="app_name">Xtorrent</string>

    <string name="text_empty">Empty</string>
    <string name="text_error_tips">Network error. Click to reload.</string>
    <string name="button_retry">Retry</string>
    <string name="text_end">&#045;&#032;The End&#032;&#045;</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hint_search">Search</string>

    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_trend">Trend</string>
    <string name="drawer_menu_movies">Movie</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_feedback">Feedback</string>

    <string name="tab_item_hot">Hot</string>
    <string name="tab_item_popularity">Popularity</string>
    <string name="tab_item_newly">Newly</string>

    <string name="button_copy_magnet">Copy magnet link</string>
    <string name="button_download_resource">Download resource</string>
    <string name="text_type">Type</string>
    <string name="text_size">Size</string>
    <string name="text_files">Files</string>
    <string name="text_downloads">Downloads</string>
    <string name="text_updated">Updated</string>
    <string name="text_created">Created</string>
    <string name="text_include_files">Include files</string>
    <string name="toast_copied">Copied</string>
    <string name="toast_no_apps_found">No apps found</string>

    <string name="contact_us">Contact Us:\n\nxtorrent9527@gmail.com</string>
</resources>
